--- a/gb/16/12/18/n8605102.md
+++ b/gb/16/12/18/n8605102.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvkxau331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mvkxau331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mvkxau331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvkxau331/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvkxau331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvkxau331/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvkxau331/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvkxau331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2016年维州VCE高考成绩揭榜</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年12月14日讯】（大纪元记者张威廉<ahref="https://github.com/mvkxau331/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>墨尔本综合报导）<ahref="https://github.com/mvkxau331/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>2016年VCE考试成绩在12月12日早晨7时公布。2,075名考生在12月7日晚因电脑系统错误而提前收到通知成绩的手机简讯。</p>
+<p>【大纪元2016年12月14日讯】（大纪元记者张威廉<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>墨尔本综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>2016年VCE考试成绩在12月12日早晨7时公布。2,075名考生在12月7日晚因电脑系统错误而提前收到通知成绩的手机简讯。</p>
 <p>Mac.Roberston Girls&#8217; High School表现卓著，有81%学生的ATAR成绩在90以上。学生能够在12月20日中午之前修改自己的专业选择和大学选择。</p>
-<p>据《时代报》12月12日报导，<ahref="https://github.com/mvkxau331/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>今年有49,765名学生完成了VCE考试，35名学生（24名男生和11名女生）的ATAR获得99.95满分。部分<ahref="https://github.com/mvkxau331/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>的满分学生分布情况请见下图。</p>
-<figure id="attachment_8605110" style="width: 412px" class="wp-caption aligncenter"><img class="wp-image-8605110 size-full" src="https://i.epochtimes.com/assets/uploads/2016/12/Capture1-5.png" alt="capture1" width="412" b="599" /><figcaption class="wp-caption-text">部分<ahref="https://github.com/mvkxau331/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>的VCE满分学生分布情况。（大纪元）</figcaption></figure>
+<p>据《时代报》12月12日报导，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>今年有49,765名学生完成了VCE考试，35名学生（24名男生和11名女生）的ATAR获得99.95满分。部分<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>的满分学生分布情况请见下图。</p>
+<figure id="attachment_8605110" aria-describedby="caption-attachment-8605110" style="width: 412px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/Capture1-5.png" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8605110 size-full" src="https://i.epochtimes.com/assets/uploads/2016/12/Capture1-5.png" alt="capture1" width="412" b="599" /></a><figcaption id="caption-attachment-8605110" class="wp-caption-text">部分<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>的VCE满分学生分布情况。（大纪元）</figcaption></figure>
 <p>维州VCE考试要求学生选择6门课程，每门课的满分为50分。英文课是必选课而且以100%的权重进入总成绩，其它5门课中得分最高的3门课分别以100%的权重进入总成绩，最后2门课分别以10%的权重进入总成绩。ATAR是按照学生总成绩排名的结果，前35名学生的ATAR成绩为99.95，下一个ATAR成绩是99.90，然后依此类推。</p>
 <p>维州考试中心数据显示，12年级女生的平均ATAR成绩为66.45，而男生的平均ATAR成绩为63.76。部分学校获得ATAR成绩90分以上的学生比例情况如下：</p>
 <ul>
@@ -59,48 +59,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/8/8/n8179620.md#1">维州部分学校提前VCE学习引非议</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/8/15/n8202196.md#1">报告吁维州禁华裔学生VCE第二语言学中文</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/10/10/n8382793.md#1">维州公校国际生增六成 本地生叫苦</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/10/23/n8424093.md#1">家有考生不用愁 专家为您解心忧</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/10/31/n8445937.md#1">VTAC警告：学校提前泄漏ATAR结果将遭严惩</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/11/14/n8491637.md#1">VCE学生旷课严重 年均缺勤超三周</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/11/21/n8513136.md#1">最新数据：维州女生比男生更爱学习</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/12/8/n8570628.md#1">澳大利亚维州考生意外提前得知高考成绩</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12424364.md#1">一本游戏书 启发孩子双语学习的兴趣</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12423260.md#1">面临“生存挑战” 维州36所私校促恢复接收留学生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/8/n8179620.md#1">维州部分学校提前VCE学习引非议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/15/n8202196.md#1">报告吁维州禁华裔学生VCE第二语言学中文</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/10/n8382793.md#1">维州公校国际生增六成 本地生叫苦</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/23/n8424093.md#1">家有考生不用愁 专家为您解心忧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/31/n8445937.md#1">VTAC警告：学校提前泄漏ATAR结果将遭严惩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/14/n8491637.md#1">VCE学生旷课严重 年均缺勤超三周</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/21/n8513136.md#1">最新数据：维州女生比男生更爱学习</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/8/n8570628.md#1">澳大利亚维州考生意外提前得知高考成绩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690407.md#1">2021年NAPLAN成绩 维州百所最佳学校出炉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688662.md#1">澳洲学校2023年开始启用新教学大纲</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/13/n12399903.md#1">古今六大预言 2020年前后的大交集(下)</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/20/n12416763.md#1">译成34种语言 一部童话触动世界人的心灵</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/24/n12427345.md#1">【珍言真语】张朴：港人反暴政 树立中国榜样</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/24/n12426398.md#1">【重播】FBI及反恐中心作证：美国面临威胁</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/25/n12428923.md#1">【拍案惊奇】华为境遇成中共心病 破译习讲话</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12424906.md#1">任志强被重判 震撼红二代及政商界圈</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12423439.md#1">川普习近平联大演讲针锋相对 白宫回应</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12424290.md#1">中共空军视频模拟炸关岛 川普公开回应</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12422727.md#1">陆综《歌手》宣布收摊 张学友曾四度拒绝邀约</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12421890.md#1">约百位星友近千粉丝吊唁黄鸿升 黄爸感动致谢</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12422856.md#1">巨石强森着急去片场 徒手拆下家中大铁门</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12423047.md#1">自夸40岁3分球9投9中?邓超被工作室纠正年龄</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12425190.md#1">二胎儿子小名首曝光 章子怡育儿经引共鸣</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12420884.md#1">染发可能引起过敏、致癌 6类人不适合</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/19/n12416135.md#1">白米粥是“世间第一补物” 中医师教你最补吃法</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/22/n12421552.md#1">中共导弹标靶完好无缺漂到岸边 网民猛调侃</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/mvkxau331/djy/blob/master/gb/20/9/23/n12424176.md#1">CNN赞台湾引领全球抗疫 点出成功关键</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvkxau331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvkxau331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/18/n8605102.htm">2016年维州VCE高考成绩揭榜</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/18/n8605102.htm">2016年维州VCE高考成绩揭榜</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvkxau331/djy/blob/master/gb/16/12/18/n8605102.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvkxau331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvkxau331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvkxau331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvkxau331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/12/18/n8605102.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
